--- a/assets/css/contact-style.css
+++ b/assets/css/contact-style.css
@@ -12,7 +12,7 @@ body {
     margin: 2rem;
     padding: 2rem;
     box-shadow: 0px 2px 15px 2px var(--primary-shadow);
-    background: white;
+    background: rgba(255, 255, 255, 0.432);
     
   }
   .contact img, .name-text{
