--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,11 @@ body {
   background-image: url("../images/background.jpg");
 }
 
+.nav{
+  position: fixed;
+}
+
+
 #select-bar {
   text-align: center;
   font-size: 25px;
