--- a/assets/css/contact-style.css
+++ b/assets/css/contact-style.css
@@ -1,49 +1,49 @@
 body {
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-image: url("../images/background.jpg");
-}    
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-image: url("../images/background.jpg");
+}
 
-.nav{
+.nav {
   position: fixed;
 }
 
-.Column{
-    display: flex;
-    flex-direction: row;
-    margin: 2rem;
-    padding: 2rem;
-    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
-    background: rgba(255, 255, 255, 0.432);
-    
-  }
-  .contact img, .name-text{
-    max-width: 60%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  .contact img{
-      height: 230px;
-  }
-  .name { 
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  };
-    
+.Column {
+  display: flex;
+  flex-direction: row;
+  margin: 2rem;
+  padding: 2rem;
+  box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+  background: rgba(255, 255, 255, 0.432);
+}
+.contact img,
+.name-text {
+  max-width: 60%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.contact img {
+  height: 230px;
+}
 
-  @media screen and (max-width: 750px){
-    .Column {
-        display: flex;
-        flex-direction: column;
-        margin: 1rem;
-      }
-      .Column{
-        display: flex;
-        margin: 3rem;
-        padding: 3rem;
-      }
-    }
+.name {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media screen and (max-width: 750px) {
+  .Column {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+  }
+  .Column {
+    display: flex;
+    margin: 3rem;
+    padding: 3rem;
+  }
+}
