--- a/assets/css/cardstyle.css
+++ b/assets/css/cardstyle.css
@@ -42,7 +42,7 @@ body {
 
 #save:hover {
   background-color: black;
-  color:white
+  color: white;
 }
 
 .p {
@@ -96,11 +96,11 @@ body {
   padding-right: 50%;
   color: black;
   font-size: 60px;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
   text-transform: capitalize;
 }
 
-#first-game {  
+#first-game {
   width: 140px;
   height: 140px;
   position: absolute;
@@ -111,7 +111,7 @@ body {
   background-size: contain;
 }
 
-#second-game {  
+#second-game {
   width: 140px;
   height: 140px;
   position: absolute;
@@ -153,7 +153,7 @@ body {
 }
 
 #pokemon-image {
-  background-color: grey;  
+  background-color: grey;
   width: 100px;
   height: 100px;
   position: absolute;
@@ -188,7 +188,7 @@ body {
   font-size: 14px;
   color: white;
   text-align: center;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
 }
 
 #type {
@@ -203,7 +203,7 @@ body {
   color: white;
   text-align: center;
   text-transform: capitalize;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
 }
 
 #playlist-title {
@@ -215,7 +215,7 @@ body {
   height: 25px;
   text-align: center;
   color: black;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
 }
 
 #title {
@@ -223,18 +223,18 @@ body {
 }
 
 #versions {
-    padding: 5px 0px 5px 0px;
-    position: absolute;
-    top: 610px;
-    left: 25%;
-    right: 25%;
-    width: 50%;
-    color: black;
-    font-size: 20px;
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Pokemon Hollow', cursive;
-    text-transform: capitalize;
+  padding: 5px 0px 5px 0px;
+  position: absolute;
+  top: 610px;
+  left: 25%;
+  right: 25%;
+  width: 50%;
+  color: black;
+  font-size: 20px;
+  text-align: center;
+  font-size: 20px;
+  font-family: "Pokemon Hollow", cursive;
+  text-transform: capitalize;
 }
 
 #move-box {
@@ -249,7 +249,7 @@ body {
   border: 2px solid #a97c2a;
   border-radius: 20px;
   font-size: 20px;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
   text-transform: uppercase;
 }
 
@@ -262,7 +262,7 @@ body {
   height: 60px;
   color: white;
   font-size: 20px;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
   text-transform: uppercase;
 }
 
@@ -275,7 +275,7 @@ body {
   height: 60px;
   color: white;
   font-size: 20px;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
   text-transform: uppercase;
 }
 
@@ -288,7 +288,7 @@ body {
   height: 60px;
   color: white;
   font-size: 20px;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
   text-transform: uppercase;
 }
 
@@ -301,7 +301,7 @@ body {
   height: 60px;
   color: white;
   font-size: 20px;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
   text-transform: uppercase;
 }
 
@@ -314,7 +314,871 @@ body {
   text-align: center;
   color: black;
   border: 2px solid #a97c2a;
-  font-family: 'Pokemon Hollow', cursive;
+  font-family: "Pokemon Hollow", cursive;
   text-transform: capitalize;
 }
 
+@media screen and (max-width: 768px) {
+  #background-card {
+    width: 65%;
+    height: 700px;
+  }
+
+  #video-box {
+    width: 90%;
+    height: 40%;
+    top: 12%;
+    left: 5%;
+  }
+
+  iframe {
+    width: 242%;
+    height: 240px;
+  }
+
+  #header-pokename {
+    width: 70%;
+    height: 50%;
+    left: 22%;
+    font-size: 25px;
+  }
+
+  #firstbox,
+  #secondbox,
+  #thirdbox {
+    width: 15%;
+    height: 10%;
+    top: 5%;
+    left: 4%;
+  }
+
+  #pokemon-image {
+    width: 10%;
+    height: 6%;
+    top: 7%;
+    left: 6.2%;
+  }
+
+  #ball-bit {
+    left: 88%;
+    height: 10%;
+    width: 10%;
+  }
+
+  #playlist-title {
+    top: 52.5%;
+    left: 25%;
+    width: 50%;
+    height: 4%;
+  }
+
+  #id-box {
+    top: 52.5%;
+    left: 5%;
+  }
+
+  #type {
+    top: 52.5%;
+    right: 5%;
+  }
+
+  #first-game {
+    top: 53.8%;
+    left: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #second-game {
+    top: 53.8%;
+    right: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #versions {
+    top: 58%;
+    font-size: 16px;
+  }
+
+  #move-box {
+    top: 71.5%;
+    height: 20%;
+    font-size: 15px;
+  }
+
+  #move-1 {
+    top: 77%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 15px;
+    padding: 5px;
+  }
+
+  #move-2 {
+    top: 77%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 15px;
+    padding: 5px;
+  }
+
+  #move-3 {
+    top: 84%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 15px;
+    padding: 5px;
+  }
+
+  #move-4 {
+    top: 84%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 15px;
+    padding: 5px;
+  }
+
+  #bottom-box {
+    top: 92%;
+    font-size: 14px;
+  }
+}
+
+@media screen and (max-width: 414px) {
+  #background-card {
+    width: 90%;
+    height: 640px;
+  }
+
+  #video-box {
+    width: 90%;
+    height: 40%;
+    top: 12%;
+    left: 5%;
+  }
+
+  iframe {
+    width: 248%;
+    height: 220px;
+  }
+
+  #header-pokename {
+    width: 70%;
+    height: 50%;
+    left: 22%;
+    font-size: 20px;
+  }
+
+  #firstbox,
+  #secondbox,
+  #thirdbox {
+    width: 14%;
+    height: 7%;
+    top: 8%;
+    left: 4%;
+  }
+
+  #pokemon-image {
+    width: 9%;
+    height: 5%;
+    top: 9%;
+    left: 6.6%;
+  }
+
+  #ball-bit {
+    top: 8%;
+    left: 88%;
+    height: 10%;
+    width: 10%;
+  }
+
+  #playlist-title {
+    height: 3.5%;
+  }
+
+  #playlist-title img {
+    height: 98%;
+    padding: 2px;
+  }
+
+  #id-box {
+    top: 52.5%;
+    left: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 12px;
+  }
+
+  #type {
+    top: 52.5%;
+    right: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 12px;
+  }
+  #first-game {
+    top: 53.8%;
+    left: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #second-game {
+    top: 53.8%;
+    right: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #versions {
+    top: 58%;
+    font-size: 16px;
+  }
+
+  #move-box {
+    top: 71.5%;
+    height: 20%;
+    font-size: 12px;
+  }
+
+  #move-1 {
+    top: 77%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #move-2 {
+    top: 77%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #move-3 {
+    top: 84%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #move-4 {
+    top: 84%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #bottom-box {
+    top: 92.5%;
+    font-size: 14px;
+    padding: 10px;
+  }
+}
+
+@media screen and (max-width: 411px) {
+  #background-card {
+    width: 90%;
+    height: 500px;
+  }
+
+  #video-box {
+    width: 90%;
+    height: 40%;
+    top: 12%;
+    left: 5%;
+  }
+
+  iframe {
+    width: 248%;
+    height: 160px;
+  }
+
+  #header-pokename {
+    width: 70%;
+    height: 50%;
+    left: 22%;
+    top: 4%;
+    font-size: 20.5px;
+  }
+
+  #firstbox,
+  #secondbox,
+  #thirdbox {
+    width: 15%;
+    height: 10%;
+    top: 5%;
+    left: 4%;
+  }
+
+  #pokemon-image {
+    width: 10%;
+    height: 6%;
+    top: 7%;
+    left: 6.2%;
+  }
+
+  #ball-bit {
+    left: 88%;
+    top: 8%;
+    height: 10%;
+    width: 10%;
+  }
+
+  #playlist-title {
+    top: 52.5%;
+    left: 25%;
+    width: 50%;
+    height: 3.5%;
+  }
+
+  #playlist-title img {
+    height: 98%;
+    padding: 2px;
+  }
+
+  #id-box {
+    top: 52.5%;
+    left: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 12px;
+  }
+
+  #type {
+    top: 52.5%;
+    right: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 12px;
+  }
+
+  #first-game {
+    top: 53.8%;
+    left: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #second-game {
+    top: 53.8%;
+    right: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #versions {
+    top: 58%;
+    font-size: 14px;
+  }
+
+  #move-box {
+    top: 71.5%;
+    height: 20%;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #move-1 {
+    top: 77%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #move-2 {
+    top: 77%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #move-3 {
+    top: 84%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #move-4 {
+    top: 84%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 12px;
+    padding: 5px;
+  }
+
+  #bottom-box {
+    top: 93%;
+    font-size: 10px;
+    padding: 5px;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  #background-card {
+    width: 90%;
+    height: 500px;
+  }
+
+  #video-box {
+    width: 90%;
+    height: 40%;
+    top: 12%;
+    left: 5%;
+  }
+
+  iframe {
+    width: 238.5px;
+    height: 160px;
+  }
+
+  #header-pokename {
+    width: 70%;
+    height: 50%;
+    left: 22%;
+    top: 4%;
+    font-size: 16px;
+  }
+
+  #firstbox,
+  #secondbox,
+  #thirdbox {
+    width: 15%;
+    height: 10%;
+    top: 5%;
+    left: 4%;
+  }
+
+  #pokemon-image {
+    width: 10%;
+    height: 6%;
+    top: 7%;
+    left: 6.2%;
+  }
+
+  #ball-bit {
+    left: 88%;
+    top: 8%;
+    height: 10%;
+    width: 10%;
+  }
+
+  #playlist-title {
+    top: 52.5%;
+    left: 25%;
+    width: 50%;
+    height: 3.5%;
+  }
+
+  #playlist-title img {
+    height: 98%;
+    padding: 2px;
+  }
+
+  #id-box {
+    top: 52.5%;
+    left: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 10px;
+  }
+
+  #type {
+    top: 52.5%;
+    right: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 10px;
+  }
+
+  #first-game {
+    top: 53.8%;
+    left: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #second-game {
+    top: 53.8%;
+    right: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #versions {
+    top: 58%;
+    font-size: 12px;
+  }
+
+  #move-box {
+    top: 71.5%;
+    height: 20%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-1 {
+    top: 77%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-2 {
+    top: 77%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-3 {
+    top: 84%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-4 {
+    top: 84%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #bottom-box {
+    top: 93%;
+    font-size: 10px;
+    padding: 5px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  #background-card {
+    width: 90%;
+    height: 500px;
+  }
+
+  #video-box {
+    width: 90%;
+    height: 40%;
+    top: 12%;
+    left: 5%;
+  }
+
+  iframe {
+    width: 254%;
+    height: 160px;
+  }
+
+  #header-pokename {
+    width: 70%;
+    height: 50%;
+    left: 22%;
+    top: 4%;
+    font-size: 16px;
+  }
+
+  #firstbox,
+  #secondbox,
+  #thirdbox {
+    width: 15%;
+    height: 10%;
+    top: 5%;
+    left: 4%;
+  }
+
+  #pokemon-image {
+    width: 10%;
+    height: 6%;
+    top: 7%;
+    left: 6.2%;
+  }
+
+  #ball-bit {
+    left: 88%;
+    top: 8%;
+    height: 10%;
+    width: 10%;
+  }
+
+  #playlist-title {
+    top: 52.5%;
+    left: 25%;
+    width: 50%;
+    height: 3.5%;
+  }
+
+  #playlist-title img {
+    height: 98%;
+    padding: 2px;
+  }
+
+  #id-box {
+    top: 52.5%;
+    left: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 10px;
+  }
+
+  #type {
+    top: 52.5%;
+    right: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 10px;
+  }
+
+  #first-game {
+    top: 53.8%;
+    left: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #second-game {
+    top: 53.8%;
+    right: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #versions {
+    top: 58%;
+    font-size: 12px;
+  }
+
+  #move-box {
+    top: 71.5%;
+    height: 20%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-1 {
+    top: 77%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-2 {
+    top: 77%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-3 {
+    top: 84%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-4 {
+    top: 84%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #bottom-box {
+    top: 93%;
+    font-size: 10px;
+    padding: 5px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  #background-card {
+    width: 90%;
+    height: 500px;
+  }
+
+  #video-box {
+    width: 90%;
+    height: 40%;
+    top: 12%;
+    left: 5%;
+  }
+
+  iframe {
+    width: 260%;
+    height: 160px;
+  }
+
+  #header-pokename {
+    width: 70%;
+    height: 50%;
+    left: 22%;
+    top: 4%;
+    font-size: 16px;
+  }
+
+  #firstbox,
+  #secondbox,
+  #thirdbox {
+    width: 15%;
+    height: 10%;
+    top: 5%;
+    left: 4%;
+  }
+
+  #pokemon-image {
+    width: 10%;
+    height: 6%;
+    top: 7%;
+    left: 6.2%;
+  }
+
+  #ball-bit {
+    left: 87%;
+    top: 8%;
+    height: 10%;
+    width: 10%;
+  }
+
+  #playlist-title {
+    top: 52.5%;
+    left: 25%;
+    width: 50%;
+    height: 3.5%;
+  }
+
+  #playlist-title img {
+    height: 98%;
+    padding: 2px;
+  }
+
+  #id-box {
+    top: 52.5%;
+    left: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 9px;
+  }
+
+  #type {
+    top: 52.5%;
+    right: 5%;
+    height: 3.5%;
+    width: 19%;
+    padding: 2px;
+    font-size: 9px;
+  }
+
+  #first-game {
+    top: 53.8%;
+    left: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #second-game {
+    top: 53.8%;
+    right: 5%;
+    height: 20%;
+    width: 20%;
+  }
+
+  #versions {
+    top: 58%;
+    font-size: 12px;
+  }
+
+  #move-box {
+    top: 71.5%;
+    height: 20%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-1 {
+    top: 77%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-2 {
+    top: 77%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-3 {
+    top: 84%;
+    left: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #move-4 {
+    top: 84%;
+    right: 12%;
+    height: 5%;
+    width: 35%;
+    font-size: 11px;
+    padding: 5px;
+  }
+
+  #bottom-box {
+    top: 93%;
+    font-size: 10px;
+    padding: 5px;
+  }
+}
